--- a/index.html
+++ b/index.html
@@ -1,92 +1,246 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <title>Love you 孔思杰</title>
-    <style>
-        html,
+    <title>I love you</title>
+    <style type="text/css">
         body {
-            height: 100%;
-            padding: 0;
             margin: 0;
+            overflow: hidden;
+            background: #000;
         }
 
         canvas {
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: black;
         }
 
-        .heart {
-            width: 20px;
-            height: 20px;
-            position: absolute;
+        #pinkboard {
+            animation: anim 1.5s ease-in-out infinite;
+            -webkit-animation: anim 1.5s ease-in-out infinite;
+            -o-animation: anim 1.5s ease-in-out infinite;
+            -moz-animation: anim 1.5s ease-in-out infinite;
         }
 
-        .heart img {
-            width: 20px;
-            height: 20px;
+        @keyframes anim {
+            0% {
+                transform: scale(0.8);
+            }
+
+            25% {
+                transform: scale(0.7);
+            }
+
+            50% {
+                transform: scale(1);
+            }
+
+            75% {
+                transform: scale(0.7);
+            }
+
+            100% {
+                transform: scale(0.8);
+            }
         }
-        .main {
-            text-align: center;
-            border-radius: 20px;
-            width: 100%;
-            height: 60px;
-            margin: auto;
+
+        @-webkit-keyframes anim {
+            0% {
+                -webkit-transform: scale(0.8);
+            }
+
+            25% {
+                -webkit-transform: scale(0.7);
+            }
+
+            50% {
+                -webkit-transform: scale(1);
+            }
+
+            75% {
+                -webkit-transform: scale(0.7);
+            }
+
+            100% {
+                -webkit-transform: scale(0.8);
+            }
+        }
+
+        @-o-keyframes anim {
+            0% {
+                -o-transform: scale(0.8);
+            }
+
+            25% {
+                -o-transform: scale(0.7);
+            }
+
+            50% {
+                -o-transform: scale(1);
+            }
+
+            75% {
+                -o-transform: scale(0.7);
+            }
+
+            100% {
+                -o-transform: scale(0.8);
+            }
+        }
+
+        @-moz-keyframes anim {
+            0% {
+                -moz-transform: scale(0.8);
+            }
+
+            25% {
+                -moz-transform: scale(0.7);
+            }
+
+            50% {
+                -moz-transform: scale(1);
+            }
+
+            75% {
+                -moz-transform: scale(0.7);
+            }
+
+            100% {
+                -moz-transform: scale(0.8);
+            }
+        }
+
+        #name {
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
-        .main h1{
-            color: pink;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: -20px;
+            font-size: 46px;
+            color: #ea80b0;
         }
     </style>
 </head>
 
 <body>
-    <canvas id="pinkboard" width="805" height="946">
-        Canvas Not Support
-    </canvas>
-    <div class="main"><h1>孔思杰</h1>></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <div class="heart"><img src="Heart.png" /></div>
-    <script>
-        var oDivs = document.querySelectorAll(".heart")
-        document.onmousemove = function (event) {
-            var event = event || window.event;
-            oDivs[0].style.top = event.clientY + "px";
-            oDivs[0].style.left = event.clientX + "px";
-            for (var i = oDivs.length - 1; i > 0; i--) {
-                oDivs[i].style.top = oDivs[i - 1].offsetTop + "px";
-                oDivs[i].style.left = oDivs[i - 1].offsetLeft + "px";
+    <canvas id="pinkboard" width="1920" height="947"></canvas>
+
+    <canvas id="canvas" width="1920" height="947"></canvas>
+
+    <script type="text/javascript">
+        const colors = [
+            "#eec996",
+            "#8fb7d3",
+            "#b7d4c6",
+            "#c3bedd",
+            "#f1d5e4",
+            "#cae1d3",
+            "#f3c89d",
+            "#d0b0c3",
+            "#819d53",
+            "#c99294",
+            "#cec884",
+            "#ff8e70",
+            "#e0a111",
+            "#fffdf6",
+            "#cbd7ac",
+            "#e8c6c0",
+            "#dc9898",
+            "#ecc8ba",
+        ]; //用来设置的颜色
+        var canvas = document.getElementById("canvas");
+        var ctx = canvas.getContext("2d");
+        let count = 1;
+
+        var ww = window.innerWidth;
+        var wh = window.innerHeight;
+
+        var hearts = [];
+
+        function init() {
+            requestAnimationFrame(render);
+            canvas.width = ww;
+            canvas.height = wh;
+            for (var i = 0; i < 100; i++) {
+                hearts.push(new Heart());
             }
         }
-        document.onmousedown = function (event) {
-            console.log(new Date().getSeconds());
+
+        function Heart() {
+            this.x = Math.random() * ww;
+            this.y = Math.random() * wh;
+            this.opacity = Math.random() * 0.5 + 0.5;
+            this.vel = {
+                x: (Math.random() - 0.5) * 4,
+                y: (Math.random() - 0.5) * 4,
+            };
+            this.targetScale = Math.random() * 0.15 + 0.02;
+            this.scale = this.targetScale * Math.random();
         }
+
+        Heart.prototype.update = function (i) {
+            this.x += this.vel.x;
+            this.y += this.vel.y;
+
+            this.scale += (this.targetScale - this.scale) * 0.01;
+            if (this.x - this.width > ww || this.x + this.width < 0) {
+                this.scale = 0;
+                this.x = Math.random() * ww;
+            }
+            if (this.y - this.height > wh || this.y + this.height < 0) {
+                this.scale = 0;
+                this.y = Math.random() * wh;
+            }
+            this.width = 473.8;
+            this.height = 408.6;
+        };
+        Heart.prototype.draw = function (i) {
+            ctx.globalAlpha = this.opacity;
+            ctx.font = `${180 * this.scale}px "微软雅黑"`;
+            // ctx.font="20px";
+            ctx.fillStyle = colors[i % 18];
+            ctx.fillText(
+                "孔思杰，我喜欢你",
+                this.x - this.width * 0.5,
+                this.y - this.height * 0.5,
+                this.width,
+                this.height
+            );
+
+        };
+
+        function render() {
+            ctx.clearRect(0, 0, ww, wh);
+            // ctx.globalAlpha = 1;
+            // ctx.fillStyle = "rgba(255,255,255,0.3)";
+            // ctx.fillRect(0, 0, ww, wh);
+            for (var i = 0; i < 100; i++) {
+                hearts[i].update(i);
+                hearts[i].draw(i);
+            }
+            requestAnimationFrame(render);
+        }
+        init();
+
+        window.addEventListener("resize", function () {
+            ww = window.innerWidth;
+            wh = window.innerHeight;
+        });
     </script>
     <script>
         /*
-     * Settings
-     */
+         * Settings
+         */
         var settings = {
             particles: {
                 length: 500, // maximum amount of particles
                 duration: 2, // particle duration in sec
                 velocity: 100, // particle velocity in pixels/sec
                 effect: -0.75, // play with this for a nice effect
-                size: 50, // particle size in pixels
+                size: 30, // particle size in pixels
             },
         };
 
@@ -94,32 +248,45 @@
          * RequestAnimationFrame polyfill by Erik M?ller
          */
         (function () {
-            var b = 0; var c = ["ms", "moz", "webkit", "o"];
+            var b = 0;
+            var c = ["ms", "moz", "webkit", "o"];
             for (var a = 0; a < c.length && !window.requestAnimationFrame; ++a) {
                 window.requestAnimationFrame = window[c[a] + "RequestAnimationFrame"];
-                window.cancelAnimationFrame = window[c[a] + "CancelAnimationFrame"] || window[c[a] + "CancelRequestAnimationFrame"]
-            } if (!window.requestAnimationFrame) { window.requestAnimationFrame = function (h, e) { var d = new Date().getTime(); var f = Math.max(0, 16 - (d - b)); var g = window.setTimeout(function () { h(d + f) }, f); b = d + f; return g } }
+                window.cancelAnimationFrame =
+                    window[c[a] + "CancelAnimationFrame"] ||
+                    window[c[a] + "CancelRequestAnimationFrame"];
+            }
+            if (!window.requestAnimationFrame) {
+                window.requestAnimationFrame = function (h, e) {
+                    var d = new Date().getTime();
+                    var f = Math.max(0, 16 - (d - b));
+                    var g = window.setTimeout(function () {
+                        h(d + f);
+                    }, f);
+                    b = d + f;
+                    return g;
+                };
+            }
             if (!window.cancelAnimationFrame) {
                 window.cancelAnimationFrame = function (d) {
-                    clearTimeout(d)
-                }
+                    clearTimeout(d);
+                };
             }
-        }()
-        );
+        })();
 
         /*
          * Point class
          */
         var Point = (function () {
             function Point(x, y) {
-                this.x = (typeof x !== 'undefined') ? x : 0;
-                this.y = (typeof y !== 'undefined') ? y : 0;
+                this.x = typeof x !== "undefined" ? x : 0;
+                this.y = typeof y !== "undefined" ? y : 0;
             }
             Point.prototype.clone = function () {
                 return new Point(this.x, this.y);
             };
             Point.prototype.length = function (length) {
-                if (typeof length == 'undefined')
+                if (typeof length == "undefined")
                     return Math.sqrt(this.x * this.x + this.y * this.y);
                 this.normalize();
                 this.x *= length;
@@ -138,6 +305,7 @@
         /*
          * Particle class
          */
+
         var Particle = (function () {
             function Particle() {
                 this.position = new Point();
@@ -163,11 +331,17 @@
             };
             Particle.prototype.draw = function (context, image) {
                 function ease(t) {
-                    return (--t) * t * t + 1;
+                    return --t * t * t + 1;
                 }
                 var size = image.width * ease(this.age / settings.particles.duration);
                 context.globalAlpha = 1 - this.age / settings.particles.duration;
-                context.drawImage(image, this.position.x - size / 2, this.position.y - size / 2, size, size);
+                context.drawImage(
+                    image,
+                    this.position.x - size / 2,
+                    this.position.y - size / 2,
+                    size,
+                    size
+                );
             };
             return Particle;
         })();
@@ -207,17 +381,17 @@
                 if (firstFree < firstActive) {
                     for (i = firstActive; i < particles.length; i++)
                         particles[i].update(deltaTime);
-                    for (i = 0; i < firstFree; i++)
-                        particles[i].update(deltaTime);
+                    for (i = 0; i < firstFree; i++) particles[i].update(deltaTime);
                 }
 
                 // remove inactive particles
-                while (particles[firstActive].age >= duration && firstActive != firstFree) {
+                while (
+                    particles[firstActive].age >= duration &&
+                    firstActive != firstFree
+                ) {
                     firstActive++;
                     if (firstActive == particles.length) firstActive = 0;
                 }
-
-
             };
             ParticlePool.prototype.draw = function (context, image) {
                 // draw active particles
@@ -228,8 +402,7 @@
                 if (firstFree < firstActive) {
                     for (i = firstActive; i < particles.length; i++)
                         particles[i].draw(context, image);
-                    for (i = 0; i < firstFree; i++)
-                        particles[i].draw(context, image);
+                    for (i = 0; i < firstFree; i++) particles[i].draw(context, image);
                 }
             };
             return ParticlePool;
@@ -239,30 +412,39 @@
          * Putting it all together
          */
         (function (canvas) {
-            var context = canvas.getContext('2d'),
+            var context = canvas.getContext("2d"),
                 particles = new ParticlePool(settings.particles.length),
-                particleRate = settings.particles.length / settings.particles.duration, // particles/sec
+                particleRate =
+                    settings.particles.length / settings.particles.duration, // particles/sec
                 time;
 
             // get point on heart with -PI <= t <= PI
             function pointOnHeart(t) {
                 return new Point(
                     160 * Math.pow(Math.sin(t), 3),
-                    130 * Math.cos(t) - 50 * Math.cos(2 * t) - 20 * Math.cos(3 * t) - 10 * Math.cos(4 * t) + 25
+                    130 * Math.cos(t) -
+                    50 * Math.cos(2 * t) -
+                    20 * Math.cos(3 * t) -
+                    10 * Math.cos(4 * t) +
+                    25
                 );
             }
 
             // creating the particle image using a dummy canvas
             var image = (function () {
-                var canvas = document.createElement('canvas'),
-                    context = canvas.getContext('2d');
+                var canvas = document.createElement("canvas"),
+                    context = canvas.getContext("2d");
                 canvas.width = settings.particles.size;
                 canvas.height = settings.particles.size;
                 // helper function to create the path
                 function to(t) {
                     var point = pointOnHeart(t);
-                    point.x = settings.particles.size / 2 + point.x * settings.particles.size / 350;
-                    point.y = settings.particles.size / 2 - point.y * settings.particles.size / 350;
+                    point.x =
+                        settings.particles.size / 2 +
+                        (point.x * settings.particles.size) / 350;
+                    point.y =
+                        settings.particles.size / 2 -
+                        (point.y * settings.particles.size) / 350;
                     return point;
                 }
                 // create the path
@@ -277,7 +459,7 @@
                 }
                 context.closePath();
                 // create the fill
-                context.fillStyle = '#ea80b0';
+                context.fillStyle = "#ea80b0";
                 context.fill();
                 // create the image
                 var image = new Image();
@@ -303,7 +485,12 @@
                 for (var i = 0; i < amount; i++) {
                     var pos = pointOnHeart(Math.PI - 2 * Math.PI * Math.random());
                     var dir = pos.clone().length(settings.particles.velocity);
-                    particles.add(canvas.width / 2 + pos.x, canvas.height / 2 - pos.y, dir.x, -dir.y);
+                    particles.add(
+                        canvas.width / 2 + pos.x,
+                        canvas.height / 2 - pos.y,
+                        dir.x,
+                        -dir.y
+                    );
                 }
 
                 // update and draw particles
@@ -323,7 +510,8 @@
                 onResize();
                 render();
             }, 10);
-        })(document.getElementById('pinkboard'));
+        })(document.getElementById("pinkboard"));
+
     </script>
 
 
